...
                            selectedTabIndex = selectedTabIndex
                        ) {
                            Tab(
                                selected = selectedTabIndex == BALANCE.index,
                                onClick = { selectedTabIndex = BALANCE.index }
                            ) {
                                Text(text = "Balance", modifier = Modifier.padding(16.dp))
                            }
                            Tab(
                                selected = selectedTabIndex == VOUCHER.index,
                                onClick = { selectedTabIndex = VOUCHER.index }
                            ) {
                                Text(text = "Voucher", modifier = Modifier.padding(16.dp))
...
